--- a/CrossCorr.html
+++ b/CrossCorr.html
@@ -113,6 +113,9 @@ layout: default
             <a href="chebyshev.html" class="">
                 <h3>Chebyshev Filters</h3>
             </a>
+            <a href="aboutus.html" class="">
+                <h3>About Us</h3>
+            </a>
         </div>
     </aside>
     <div class="flex-container">
@@ -121,7 +124,7 @@ layout: default
             <p>In signal processing, cross-correlation is a measure of similarity of two series as a function of the displacement of one relative to the other. This is also known as a sliding dot product or sliding inner-product. It is commonly used for searching a long signal for a shorter, known feature. It has applications in pattern recognition, single particle analysis, electron tomography, averaging, cryptanalysis, and neurophysiology. The cross-correlation is similar in nature to the convolution of two functions.</p>
             <h4><strong>Explanation:</strong></h4>
             <p>Consider two finite length sequences, say x(n) and y(n). The cross correlation of x(n) and y(n) can be obtained by simply performing convolution between x(n) and y(-n) i.e</p>
-            <h5 style="text-align: center;">R<sub>xy</sub>(n) = x(n)*y(-n)</h5><br><br>
+            <h4 style="text-align: center; overflow-y: hidden;">R<sub>xy</sub>(n) = x(n)*y(-n)</h4><br><br>
             <p>The step-by-step values for the provided input is shown below :</p>
             <h4 class="plot-title" id="exp-part-1">x(n) and y(n) :</h4>
             <table id="exp">
@@ -129,7 +132,7 @@ layout: default
             <h4 class="plot-title" id="exp-part-2">Add the below sequences :</h4>
             <table id="exp1">
             </table><hr>
-            <h4 class="plot-title" id="exp-part-3">R<sub>xy</sub>(n) :</h4>
+            <h4 class="plot-title" id="exp-part-3" style="overflow-y: hidden;">R<sub>xy</sub>(n) :</h4>
             <table id="exp2">
             </table><br><br>
         </main>
