--- a/bilinear.html
+++ b/bilinear.html
@@ -114,6 +114,9 @@ layout: default
             <a href="chebyshev.html" class="">
                 <h3>Chebyshev Filters</h3>
             </a>
+            <a href="aboutus.html" class="">
+                <h3>About Us</h3>
+            </a>
         </div>
     </aside>
     <div class="flex-container">
@@ -131,8 +134,6 @@ layout: default
         in the right half of s-plane are mapped outside the unit circle in the z-plane. So the 
         transformation of a stable analog filter results in stable digital filter. The bilinear transformation 
         can be obtained by using the trapezoidal formula for the numerical integration.</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Let the system function of the analog filter be</p>
-        <p><img src="assets/IMG_20220716_130345.JPG" width="12%"></p>
         <p>The differential equation describing the above analog filter can be obtained as:</p>
         <p><img src="assets/IMG_20220716_130402.JPG" width="30%"></p>
         <p>Taking inverse Laplace transform on both sides and applying z transform, we get</p>
