--- a/butterworth.html
+++ b/butterworth.html
@@ -114,11 +114,14 @@ layout: default
             <a href="chebyshev.html" class="">
                 <h3>Chebyshev Filters</h3>
             </a>
+            <a href="aboutus.html" class="">
+                <h3>About Us</h3>
+            </a>
         </div>
     </aside>
     <div class="flex-container">
         <main>
-            <h3 style="text-align:center;" >Design proceure for low-pass digital Butterworth llR filter</h3>
+            <h3 style="text-align:center;" >Design proceure for low-pass digital Butterworth IIR filter</h3>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;The low-pass digital Butterworth filter is designed as per the following steps:</p>
             <p><img src="assets/IMG_20220716_011018.JPG" width="35%"></p>
             <p><strong><i>step 1:</i></strong>Choose the type of transformation either bilinear or impulse invariant</p>
@@ -127,7 +130,7 @@ layout: default
             <p><strong><i>step 3:</i></strong>Decide the order of filter N such that</p>
             <p><img src="assets/IMG_20220716_004810.JPG" width="35%"></p>
             <p><strong><i>step 4:</i></strong>Calculate the analog cutoff frequency</p>
-            <p><img src="assets/IMG_20220716_005054.JPG" width="15%"></p>
+            
             <p><strong><i>step 5:</i></strong>Determine the transfer function of analog filter.</p>
             <p>&nbsp;&nbsp; If N id odd, then H(s) is given by</p>
             <p><img src="assets/IMG_20220716_005109.JPG" width="35%"></p>
