--- a/firdirectform.html
+++ b/firdirectform.html
@@ -114,6 +114,9 @@ layout: default
             <a href="chebyshev.html" class="">
                 <h3>Chebyshev Filters</h3>
             </a>
+            <a href="aboutus.html" class="">
+                <h3>About Us</h3>
+            </a>
         </div>
     </aside>
     <div class="flex-container">
@@ -131,19 +134,21 @@ layout: default
                 <b>TRANSFER FUNCTION:</b><br>
                 <font size="6">   a<SUB><SMALL>0</SMALL></SUB> +a<SUB><SMALL>2</SUB></SMALL>   Z<SUP><SMALL>-1</SMALL></SUP>+ a<SUB><SMALL>2</SUB></SMALL>   Z<SUP><SMALL>-2</SMALL></SUP> +a<SUB><SMALL>3</SUB></SMALL>    Z<SUP><SMALL>-3</SMALL></SUP></font>               
                 <br><br>
-                <h6>a0:  </h6><input type="number" id="0" onclick="fn0()"  value="0" step="1"  "> <br>
-                <h6>a1:  </h6><input type="number" id="1" onchange="fn1()"  value="0" step="1" style="position:relative; "><br>
-                <h6>a2:  </h6><input type="number" id="2" onchange="fn2()"  value="0" step="1" style="position:absolute;"> <br>
-                <h6>a3:  </h6><input type="number" id="3" onchange="fn3()"  value="0" step="1" style="position:absolute; "><br>
+                <h6>a0:  </h6><input type="number" id="0" onclick="fn0()"  value="0" step="1" > <br>
+                <h6>a1:  </h6><input type="number" id="1" onchange="fn1()"  value="0" step="1"  ><br>
+                <h6>a2:  </h6><input type="number" id="2" onchange="fn2()"  value="0" step="1" > <br>
+                <h6>a3:  </h6><input type="number" id="3" onchange="fn3()"  value="0" step="1" ><br>
             </div>
             <br>
             <h2>REALIZATION OUTPUT:</h2>
             <div>
             <img src="assets/firdirectform.jpeg" style="overflow: scroll; width:95%;right:10px;">
-            <h4 id="b1" style="position:absolute; top:522px;  right:399px;"></h4>
-            <h4 id="b2" style="position:absolute; top:522px;  right:302px;"></h4>
-            <h4 id="b3" style="position:absolute; top:522px;  right:204px;"></h4>
-            <h4 id="b4" style="position:absolute; top:522px;  right:108px;"></h4><br><br>
+            <h3>values of constants(b0,b1,b2,b3)<br> after realising are:
+            </h3>
+            <h4 id="b1" style=" top:522px;  right:399px;"></h4>
+            <h4 id="b2" style=" top:522px;  right:302px;"></h4>
+            <h4 id="b3" style=" top:522px;  right:204px;"></h4>
+            <h4 id="b4" style=" top:522px;  right:108px;"></h4><br><br>
         </main>
         <div class="right">
             <div class="top">
