--- a/interpolation.html
+++ b/interpolation.html
@@ -114,6 +114,9 @@ layout: default
         <a href="chebyshev.html" class="">
             <h3>Chebyshev Filters</h3>
         </a>
+        <a href="aboutus.html" class="">
+            <h3>About Us</h3>
+        </a>
         </div>
     </aside>
     <div class="flex-container">
@@ -136,12 +139,12 @@ layout: default
   
     </p>
     <p>The formula for the interpolation is given by </p>
-    <img src="./assets/Interpolation1.png" class="mx-auto d-block" style="width:px;height:px;">
+    <img src="./assets/Interpolation1.png" class="mx-auto d-block" style="width:40%;height:4%;">
     <p>
     where
     </p>
     <br><br>
-    <img src="./assets/Interpolation2.png" class="mx-auto d-block" style="width:px;height:px;">
+    <img src="./assets/Interpolation2.png" class="mx-auto d-block" style="width:60%;height:9%;">
   
     <br><br>
     <p>
