--- a/chebyshev.html
+++ b/chebyshev.html
@@ -114,6 +114,9 @@ layout: default
             <a href="chebyshev.html" class="active">
                 <h3>Chebyshev Filters</h3>
             </a>
+            <a href="aboutus.html" class="">
+                <h3>About Us</h3>
+            </a>
         </div>
     </aside>
     <div class="flex-container">
