--- a/interpolation.html
+++ b/interpolation.html
@@ -139,12 +139,13 @@ layout: default
   
     </p>
     <p>The formula for the interpolation is given by </p>
-    <img src="./assets/Interpolation1.png" class="mx-auto d-block" style="width:40%;height:4%;">
+    <img src="./assets/Interpolation1.png" class="mx-auto d-block" style="width:50%;height:4%;">
+    <br><br>
     <p>
-    where
+    where polyphase implementation of interpolation filter is
     </p>
     <br><br>
-    <img src="./assets/Interpolation2.png" class="mx-auto d-block" style="width:60%;height:9%;">
+    <img src="./assets/Interpolation5.png" class="mx-auto d-block" style="width:80% ;height:10%">
   
     <br><br>
     <p>
