fixed theme toggler

--- a/differences(FIR&IIR).html
+++ b/differences(FIR&IIR).html
@@ -121,7 +121,7 @@ layout: default
     </aside>
     <div class="flex-container">
         <main>
-            <table class= "table table-hover">
+            <table class= "table table-hover" style="color: var(--color-dark);">
 
                 <tr class="row">
                   <th scope="col" class="col col-mid-4">
