--- a/impulseinvariant.html
+++ b/impulseinvariant.html
@@ -96,7 +96,7 @@ layout: default
             <a href="bilinear.html" class="">
                 <h3>Bilinear Transformation</h3>
             </a>
-            <a href="impulseinvariant.html" class="">
+            <a href="impulseinvariant.html" class="active">
                 <h3>Impulse Invariant</h3>
             </a>
             <a href="FIR.html" class="">
@@ -105,7 +105,7 @@ layout: default
             <a href="aprderivatives.html" class="">
                 <h3>Approximation of Derivatives</h3>
             </a>
-            <a href="windows.html" class="active">
+            <a href="windows.html" class="">
                 <h3>Window Techniques</h3>
             </a>
             <a href="butterworth.html" class="">
@@ -121,7 +121,7 @@ layout: default
     </aside>
     <div class="flex-container">
         <main>
-            <h3 style="text-align:center;">DESIGN OF IIR FILTER BY IMPULSE INVARIANT TRANSFORMATION</h3>
+            <h2 style="text-align:center;">DESIGN OF IIR FILTER BY IMPULSE INVARIANT TRANSFORMATION</h2>
     <P>&nbsp;&nbsp;&nbsp;&nbsp;In this technique, the desired impulse response of the digital filter is obtained by uniformly
         sampling the impulse response of the equivalent analog filter. The main idea behind this is to
         preserve the frequency response characteristics of the analog filter. For the digital filter to
